books objects are no longer covering buttons

--- a/public/style.css
+++ b/public/style.css
@@ -31,7 +31,7 @@
     padding: 15px 32px;
     text-align: center;
     text-decoration: none;
-    display: inline-block;
+    display: block;
     font-size: 16px;
 }
 
